--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/group.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Management App</title>
+    <title>AuthMaster | User Management App</title>
   </head>
 
   <body>
